2001-09-11    <johan@FRIJA>

	* src/SDCCval.c (valDiv Mod Minus Plus Shift): keep litteral expressions as small as possible (bug #460010)

2001-09-10  Michael Hope  <michaelh@juju.net.nz>

	* support/regression/tests/bug-460444.c: Added test case.

	* src/z80/gen.c (genOr): bug 460444: if (a ^ lit) was broken for &, |, and ^.
	(genCast): Added justification for all of the asserts.

2001-09-10  Bernhard Held <bernhard@bernhardheld.de>

	* support/regression/support.c: _xdata replaced by xdata

	* support/regression/spec.mk: removed _generic

2001-09-09  Michael Hope  <michaelh@juju.net.nz>

	* src/pic/ralloc.c (debugLogRegType): Removed some old types to get it to compile.

	* src/z80/gen.c (shiftR2Left2Result): Improved the case when v = v >> n for small values of n to use less code space and time.
	(genrshTwo): Fixed v = v >> n where v is a negative int and n is > 8: bug 460010.

	* src/z80/peeph.def: Added a rule to optimise shift then compare.

	* support/regression/tests/bug-460000.c (testShiftByParam): Added test case.

	* support/regression/tests/bug-460010.c: Added test case.

	* support/regression/Makefile (test-host): Removed a silly 'clean' target when testing against gcc.

2001-09-09  Bernhard Held <bernhard@bernhardheld.de>

	* support/regression/Makefile: inter-port-clean adjusted for mcs51

	* support/regression/testfwk.c: removed workaround for bug #436344

	* support/regression/tests/bp.c: use less memory with mcs51

	* support/regression/tests/bug-441448.c: use less memory

	* support/regression/tests/ports/mcs51/spec.mk: cleanup, use --stack-after-data

	* support/regression/collate-results.py: typo

2001-09-08  Michael Hope  <michaelh@juju.net.nz>

	* support/regression/tests/fetchoverlap.c: Added new test case.

	* support/regression/tests/bp.c: Added new test case.

	* support/regression/tests/bug-448984.c: Added new test case.

	* support/regression/tests/pow2shifts.c: Added new test case.
